--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-markdown": "^8.0.5",
     "react-organizational-chart": "^2.2.0",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.6",
     "rehype-highlight": "^6.0.0",
     "rehype-raw": "^6.1.1",
