--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@react-pdf/renderer": "^3.1.5",
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.2.8",
     "@supabase/supabase-js": "^2.8.0",
     "autosuggest-highlight": "^3.3.4",
+    "axios": "^1.3.4",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "framer-motion": "^9.0.4",
